<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    android:id="@+id/main"
    >

    <ImageView
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:scaleType="fitXY"
        android:layout_above="@id/missbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:src="@drawable/tablegreen"
        android:adjustViewBounds="true"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/redbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/pinkbtn"
        android:layout_above="@id/missbtn"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="115dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_ball"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/numred"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/pinkbtn"
        android:layout_above="@id/missbtn"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="107dp"
        android:background="#00FFFFFF"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/blackbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/redbtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="115dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_black"
        />

    <TextView
        android:id="@+id/numblack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/redbtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="107dp"
        android:background="#00FFFFFF"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/yellowbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_yellow"
        />

    <TextView
        android:id="@+id/numyellow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="52dp"
        android:background="#00FFFFFF"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/greenbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="170dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_green"
        />

    <TextView
        android:id="@+id/numgreen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="162dp"
        android:background="#00FFFFFF"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/brownbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="115dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_brown"
        />

    <TextView
        android:id="@+id/numbrown"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="107dp"
        android:background="#00FFFFFF"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bluebtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/dots"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="115dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_blue"
        />

    <TextView
        android:id="@+id/numblue"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@id/dots"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="107dp"
        android:background="#00FFFFFF"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/pinkbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="115dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_pink"
        />

    <TextView
        android:id="@+id/numpink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/bluebtn"
        android:layout_above="@id/missbtn"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="107dp"
        android:background="#00FFFFFF"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/missbtn"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_toEndOf="@id/dots"
        android:layout_above="@id/newgamebtn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circlegreen"
        android:textColor="#000000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/miss"
        android:textAlignment="center"
        android:tint="#535353"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/penaltybtn"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_toStartOf="@id/dots"
        android:layout_above="@id/clearbtn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circlegreen"
        android:textColor="#000000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/penalty"
        android:textAlignment="center"
        android:tint="#535353"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearbtn"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_toEndOf="@id/newgamebtn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circlegreen"
        android:textColor="#000000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/clear"
        android:textAlignment="center"
        android:tint="#535353" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newgamebtn"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circlegreen"
        android:textColor="#000000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:tint="#535353"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/undobtn"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_toStartOf="@id/newgamebtn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circlegreen"
        android:textColor="#000000"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/undo"
        android:textAlignment="center"
        android:tint="#535353"
        />

    <EditText
        android:id="@+id/player1"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/dots"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/player1"
        android:background="@drawable/circle1"
        android:textColor="#FFFFFF"
        android:hint="@string/player1"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"/>

    <EditText
        android:id="@+id/player2"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/dots"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/player2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:autofillHints="@string/player2"
        android:inputType="text"
        android:background="@drawable/circle2"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/dots"
        android:layout_width="20dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dots"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@drawable/circle6"
        android:textColor="#FFFFFF"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/gamepl1"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_below="@id/dots"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/dots2"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@drawable/circle6"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/gamepl2"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_below="@id/dots"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/dots2"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@drawable/circle6"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/countplayer1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_toStartOf="@id/gamepl1"
        android:layout_below="@id/dots"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circlegreen4"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/countplayer2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/dots"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/gamepl2"
        android:textAlignment="center"
        android:background="@drawable/circlegreen3"
        android:textColor="#000000"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/dots2"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_below="@id/dots"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dots3"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@drawable/circle6"
        android:textColor="#FFFFFF"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/p1p2"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_below="@id/dots2"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/ontable"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/circle6"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/p2p1"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_below="@id/dots2"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/ontable"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/circle6"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/accu1"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_below="@id/dots2"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/p1p2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/circlegreen4"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/accu2"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_below="@id/dots2"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/p2p1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/circlegreen3"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/ontable"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_below="@id/dots2"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/circlegreen5"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ontable"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/circlegreen"
        android:textColor="#000000"/>


</RelativeLayout>